--- a/index.html
+++ b/index.html
@@ -8,8 +8,14 @@
   <!-- https://p5js.org/download/ -->
   <script src="https://cdn.jsdelivr.net/npm/p5@1.11.2/lib/p5.min.js"></script>
 
+  <link rel="stylesheet" href="css/style.css">
+  <!-- <script src="js/art.js"></script> -->
+  <script src="js/vangough.js"></script>
+
 </head>
 <body>
+
+  <!-- <h1>Testing...</h1> -->
 
 </body>
 </html>
